# CLIPS-ArduinoNanoESP32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  my_single_app_large_no_ota.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/CLIPS/: CLIPS_LICENSE.txt  CLIPS_VERSION.txt  CMakeLists.txt  bmathfun.cpp  clips.cpp  constrct.cpp  defins.cpp  dffctdef.cpp  dffnxfun.cpp  emathfun.cpp  envrnbld.cpp  envrnmnt.cpp  factmngr.cpp  filertr.cpp  generate.cpp  genrccom.cpp  globldef.cpp  iofun.cpp  miscfun.cpp  prntutil.cpp  router.cpp  ruledef.cpp  rulepsr.cpp  strngfun.cpp  sysdep.cpp  tablebsc.cpp  tablepsr.cpp  tmpltdef.cpp  utility.cpp
components/CLIPS/include/: constant.h  factmngr.h  miscfun.h  tmpltdef.h  usrsetup.h  utility.h
main/: clips_digital_io.cpp  clips_digital_io.h  clips_gpio.cpp  clips_gpio.h  clips_mqtt.cpp  clips_mqtt.h  clips_utils.cpp  clips_utils.h  clips_wifi.cpp  clips_wifi.h  idf_component.yml  main.cpp  main.h  pins_arduino.h
main/arduino_nano_nora/: LICENSE
